--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                                     <li><a class="dropdown-item" href="blog-home.html">Blog Home</a></li>
                                     <li><a class="dropdown-item" href="blog-post.html">Blog Post</a></li>
                                     <li><a class="dropdown-item" href="blog-post.html">Blog main</a></li>
+                                    <li><a class="dropdown-item" href="blog-post.html">Blog HI</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
